# MatAnyone2Kit

./: .gitignore  NOTICE.md  Package.swift  README.md
Sources/MatAnyoneKitCoreML/: CoreMLFrameBridge.swift  MatAnyoneCoreML.swift  MatAnyoneCoreMLEngine.swift  MatAnyoneMatte.swift  MemoryBank.swift
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/: LICENSE  NOTICE.md  manifest.json
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/decoder.mlmodelc/: metadata.json  model.mil
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/encoder.mlmodelc/: metadata.json  model.mil
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/maskencoder.mlmodelc/: metadata.json  model.mil
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/objsummary.mlmodelc/: metadata.json  model.mil
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/readout.mlmodelc/: metadata.json  model.mil
Sources/MatAnyoneKitCoreML/Resources/MatAnyone/uncert.mlmodelc/: metadata.json  model.mil
scripts/: README.md  coreml_prod_op.py  dump_e2e_ref.py  e2e_validate.swift  export.py  harness.py  pyproject.toml
scripts/matte-demo/: Package.swift
scripts/matte-demo/Sources/MatteVideo/: main.swift
